--- a/config_sample.env
+++ b/config_sample.env
@@ -7,18 +7,18 @@
 ####################
 
 # Telegram API credentials (from https://my.telegram.org/apps)
-API_ID=0 # Example: 1234567
-API_HASH="" # Example: "abc123def456"
+API_ID=27705761 # Example: 1234567
+API_HASH="822cb334ca4527a134aae97f9fe44fd6" # Example: "abc123def456"
 
 # Bot token (from @BotFather)
-BOT_TOKEN="" # Example: "123456789:ABCdef..."
+BOT_TOKEN="7626180904:AAGlwYhTH0gV-6HwGWUl_m6E8IkAv1AyLwo" # Example: "123456789:ABCdef..."
 
 # Storage channel ID (create a channel and add bot as admin)
-BIN_CHANNEL=0 # Example: -1001234567890
+BIN_CHANNEL=-1002616161685 # Example: -1001234567890
 
 # Owner information (get ID from @userinfobot)
-OWNER_ID="" # Your Telegram user ID(s) as a space-separated string. Example: "123456789 098765432"
-OWNER_USERNAME="" # Example: "@YourUsername"
+OWNER_ID="8110231942" # Your Telegram user ID(s) as a space-separated string. Example: "123456789 098765432"
+OWNER_USERNAME="@Akash23166ybot" # Example: "@YourUsername"
 
 # Database connection string
 DATABASE_URL="" # Example: "mongodb+srv://user:pass@host/db"
@@ -39,13 +39,13 @@ MAX_BATCH_FILES=50
 SET_COMMANDS="True"
 
 # Force users to join a specific channel before using the bot
-FORCE_CHANNEL_ID="" # Example: -1001234567890 (Leave empty if not needed)
+FORCE_CHANNEL_ID="-1002616161685" # Example: -1001234567890 (Leave empty if not needed)
 
 # Allow processing of channel messages (True/False)
 CHANNEL="False"
 
 # Banned channels (files from these channels will be rejected)
-BANNED_CHANNELS="" # Example: "-1001234567890 -100987654321" (Space-separated IDs, leave empty if none)
+BANNED_CHANNELS="-1002616161685" # Example: "-1001234567890 -100987654321" (Space-separated IDs, leave empty if none)
 
 # Multiple bot tokens (can add up to MULTI_TOKEN49) # Example: MULTI_TOKEN49="123456789:ABCdef..."
 MULTI_TOKEN1=""
@@ -113,3 +113,4 @@ WORKERS=8 # Number of worker processes
 # Web server configuration
 BIND_ADDRESS="0.0.0.0" # Listen on all network interfaces
 PING_INTERVAL=840 # Ping interval in seconds
+
