--- a/config_sample.env
+++ b/config_sample.env
@@ -24,7 +24,7 @@ OWNER_USERNAME="@Akash23166ybot" # Example: "@YourUsername"
 DATABASE_URL="mongodb+srv://akashrabha2005:781120@cluster0.pv6yd2f.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0" # Example: "mongodb+srv://user:pass@host/db"
 
 # Deployment configuration
-FQDN="http://152.53.155.85" # Your domain name (leave empty to use IP)
+FQDN="152.53.155.85" # Your domain name (leave empty to use IP)
 HAS_SSL="False" # Set to "True" if using HTTPS
 PORT=8080 # Web server port
 NO_PORT="True" # Hide port in URLs ("True" or "False")
@@ -113,5 +113,6 @@ WORKERS=8 # Number of worker processes
 # Web server configuration
 BIND_ADDRESS="0.0.0.0" # Listen on all network interfaces
 PING_INTERVAL=840 # Ping interval in seconds
+
 
 
